fix overflowing alt text

--- a/list.css
+++ b/list.css
@@ -164,7 +164,9 @@ p.preview-image {
 }
 
 #list img {
-  width: 45px;
+  max-width: 45px;
+  max-height: 45px;
+  overflow: hidden;
   image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
   image-rendering: -moz-crisp-edges;          /* Firefox                        */
   image-rendering: -o-crisp-edges;            /* Opera                          */
